--- a/workspace/NetEastMusicCracker/AndroidManifest.xml
+++ b/workspace/NetEastMusicCracker/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="11"
         android:targetSdkVersion="23" />
+    
+    <uses-permission android:name="android.permission.ACCESS_SUPERUSER"/>
 
     <application
         android:allowBackup="true"
