--- a/server/nginx_conf.conf
+++ b/server/nginx_conf.conf
@@ -5,7 +5,8 @@ server {
         location / {
                proxy_pass http://music.163.com;
                proxy_set_header Host $host;
-               proxy_set_header X-Real-IP $remote_addr;                                        proxy_set_header Accept-Encoding "";
+               proxy_set_header X-Real-IP $remote_addr;
+               proxy_set_header Accept-Encoding "";
                sub_filter '"st":-200' '"st":0';
                sub_filter '"pl":0' '"pl":320000';
                sub_filter '"dl":0' '"dl":320000';
