Change nginx conf

--- a/server/nginx_conf.conf
+++ b/server/nginx_conf.conf
@@ -1,9 +1,11 @@
 server {
         listen 80;
         server_name music.163.com;
+        resolver 114.114.114.114;
+        set $backend_upstream "http://music.163.com";
 
         location / {
-               proxy_pass http://music.163.com;
+               proxy_pass $backend_upstream;
                proxy_set_header Host $host;
                proxy_set_header X-Real-IP $remote_addr;
                proxy_set_header Accept-Encoding "";
