--- a/server/nginx_conf.conf
+++ b/server/nginx_conf.conf
@@ -10,11 +10,16 @@ server {
                proxy_set_header X-Real-IP $remote_addr;
                proxy_set_header Accept-Encoding "";
                sub_filter '"st":-200' '"st":0';
+               sub_filter '"st":-100' '"st":0';
+               sub_filter '"st":-1' '"st":0';
+               sub_filter '"st":-2' '"st":0';
+               sub_filter '"st":-3' '"st":0';
                sub_filter '"pl":0' '"pl":320000';
                sub_filter '"dl":0' '"dl":320000';
-              #sub_filter '"sp":0' '"sp":7';
-              #sub_filter '"cp":0' '"cp":1';
-              #sub_filter '"subp":0' '"subp":1';
+               sub_filter '"fee":1' '"fee":0';
+               sub_filter '"sp":0' '"sp":7';
+               sub_filter '"cp":0' '"cp":1';
+               sub_filter '"subp":0' '"subp":1';
                sub_filter '"fl":0' '"fl":320000';
                sub_filter_once off;
                sub_filter_types *;
