--- a/workspace/NetEaseMusicCracker/.project
+++ b/workspace/NetEaseMusicCracker/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NetEastMusicCracker</name>
+	<name>NetEaseMusicCracker</name>
 	<comment></comment>
 	<projects>
 	</projects>
